test/fail/unused-switch-case.mo
switch (?1) {
    case (?unused1) {};
    case unused2 {};
};
